<resources>
    <string name="app_name">Tip Time</string>
    <string name="hint">Cost of Service</string>
    <string name="service_questing">How was the service?</string>
    <string name="twenty_percent">Amazing (20%)</string>
    <string name="eighteen_percent">Good (18%)</string>
    <string name="fifteen_percent">Okay (15%)</string>
    <string name="switch_text">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate_button">Calculate</string>
</resources>